--- a/Volans_gui/AdapterSelectionWindow.xaml
+++ b/Volans_gui/AdapterSelectionWindow.xaml
@@ -5,9 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Volans_gui"
         mc:Ignorable="d"
-        Title="AdapterSelectionWindow" Height="338" Width="433">
-    <Grid Margin="0,0,0,-6">
-        <ListBox Name="adapterListBox" VerticalAlignment="Top" Height="200" Margin="20,20,0,0" HorizontalAlignment="Left" Width="330"/>
-        <Button Content="Выбрать" HorizontalAlignment="Right" VerticalAlignment="Bottom" Width="75" Height="23" Margin="0,0,10,10" Click="SelectButton_Click"/>
+        Title="Adapter Selection Window" Height="300" Width="400" Background="White">
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0*"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <ListBox Name="adapterListBox" Margin="10,10,10,38" Grid.Column="1"/>
+        <Button Content="Выбрать" HorizontalAlignment="Center" Width="75" Margin="0,0,0,10" Click="SelectButton_Click" Grid.Column="1" Height="23" VerticalAlignment="Bottom"/>
     </Grid>
 </Window>
